# OptML-Project

./: .gitignore  DataPartitionfigure.ipynb  README.md  TrainedModelEval.ipynb  algorithm_factory.py  dataset_factory.py  debug.py  main.py  model_factory.py  plots.py  pyproject.toml  requirments.txt  setup.py
.ipynb_checkpoints/: README-checkpoint.md
conf/: cifar_resnet18.yaml  cifar_resnet18_alpha0_75.yaml  cifar_resnet18_iid.yaml  config.yaml  fake_debug.yaml  minst_cnn.yaml  mnist_cnn.yaml  mnist_cnn_debug.yaml  mnist_cnn_fedprox.yaml  mnist_cnn_fedprox_iid.yaml  mnist_cnn_server.yaml  mnist_cnn_shared.yaml  mnist_cnn_small_local.yaml  mnist_sweep.yaml
conf/.ipynb_checkpoints/: cifar_resnet18_iid-checkpoint.yaml  mnist_cnn_debug-checkpoint.yaml  mnist_cnn_iid-checkpoint.yaml
conf/algorithm/: fedavg.yaml  fedprox.yaml
conf/dataset/: cifar10_dir0.5.yaml
conf/model/: resnet10.yaml
conf/task/: image_classif.yaml
lightning_logs/version_26/: metrics.csv
lightning_logs/version_28/: metrics.csv
lightning_logs/version_29/: metrics.csv
lightning_logs/version_30/: metrics.csv
lightning_logs/version_31/: metrics.csv
lightning_logs/version_32/: metrics.csv
lightning_logs/version_33/: hparams.yaml  metrics.csv
lightning_logs/version_34/: metrics.csv
lightning_logs/version_35/: metrics.csv
lightning_logs/version_36/: metrics.csv
multirun_logs/: multirun.yaml
src/: algorithm_factory.py  client_app.py  dataset_factory.py  globals.py  history.py  model.py  model_factory.py  server.py  server_app.py  straregy_factory.py  untitled.py  utils.py
(+124 files in other folders)
